--- a/Modules/MobileManager/Views/Billing/ViewExtDataValidation.xaml
+++ b/Modules/MobileManager/Views/Billing/ViewExtDataValidation.xaml
@@ -20,6 +20,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="20" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="25" />
@@ -65,15 +66,16 @@
                 ItemsSource="{Binding ExternalDataCollection}" DisplayMemberPath="TableName"
                 SelectedItem="{Binding SelectedExternalData, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
         </Border>
-        <Grid Grid.Row="1" Grid.Column="5" Grid.RowSpan="3" Margin="0,10,0,0">
+        <Grid Grid.Row="1" Grid.Column="5" Grid.RowSpan="4" Margin="0,10,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="20" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="90" />
-                <ColumnDefinition Width="90" />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="100" />
             </Grid.ColumnDefinitions>
             <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Height="1" Background="Gray" VerticalAlignment="Top"></Border>
             <TextBlock Grid.Row="0" Grid.Column="0" Text="Totals" Style="{StaticResource UXLabelTextStyle}" FontWeight="Bold" Margin="0,3,0,3"></TextBlock>
@@ -85,14 +87,23 @@
                 Text="{Binding ValidationDataRulesPassed, UpdateSourceTrigger=PropertyChanged}"/>
             <TextBlock x:Name="TextBlockDataRulesFailed" Grid.Row="1" Grid.Column="2" Style="{StaticResource UXLabelTextStyle}" HorizontalAlignment="Center"
                 Text="{Binding ValidationDataRulesFailed, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Grid.Row="2" Grid.Column="0" Text="Data rule entities" Style="{StaticResource UXLabelTextStyle}"></TextBlock>
+            <TextBlock x:Name="TextBlockRuleEntitiesPassed" Grid.Row="2" Grid.Column="1" Style="{StaticResource UXLabelTextStyle}" HorizontalAlignment="Center"
+                Text="{Binding ValidationRuleEntitiesPassed, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock x:Name="TextBlockRuleEntitiesFailed" Grid.Row="2" Grid.Column="2" Style="{StaticResource UXLabelTextStyle}" HorizontalAlignment="Center"
+                Text="{Binding ValidationRuleEntitiesFailed, UpdateSourceTrigger=PropertyChanged}"/>
             <Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Height="1" VerticalAlignment="Bottom" Background="Gray" Margin="0,5,0,0"></Border>
         </Grid>
         <TextBlock x:Name="TextBlockDataRuleProgress" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Bottom" Margin="0,10,0,0" Style="{StaticResource UXLabelTextStyle}"                
             Text="{Binding ValidationDataRuleDescription, UpdateSourceTrigger=PropertyChanged}"/>
-        <ProgressBar x:Name="ProgressBarDataRule" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Height="22" BorderBrush="DarkGray" BorderThickness="1" VerticalAlignment="Bottom"
+        <ProgressBar x:Name="ProgressBarDataRule" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Height="20" BorderBrush="DarkGray" BorderThickness="1"
             Value="{Binding ValidationDataRuleProgress, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding ValidationDataRuleCount, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBlock Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Text="Data Validation Exceptions" Style="{StaticResource UXLabelTextStyle}" VerticalAlignment="Bottom" ></TextBlock>
-        <xctk:CheckListBox x:Name="ListBoxExceptions" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="5" Background="WhiteSmoke" TabIndex="4" ValueMemberPath="Message"
+        <TextBlock x:Name="TextBlockRuleEntityProgress" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Bottom" Style="{StaticResource UXLabelTextStyle}"                
+            Text="{Binding ValidationRuleEntityDescription, UpdateSourceTrigger=PropertyChanged}"/>
+        <ProgressBar x:Name="ProgressBarRuleEntity" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Height="20" BorderBrush="DarkGray" BorderThickness="1"
+            Value="{Binding ValidationRuleEntityProgress, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding ValidationRuleEntityCount, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBlock Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Text="Data Validation Exceptions" Style="{StaticResource UXLabelTextStyle}" VerticalAlignment="Bottom" ></TextBlock>
+        <xctk:CheckListBox x:Name="ListBoxExceptions" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="5" Background="WhiteSmoke" TabIndex="4" ValueMemberPath="Message"
             ItemsSource="{Binding ValidationErrorCollection, UpdateSourceTrigger=PropertyChanged}" SelectedValue="{Binding SelectedExceptions, UpdateSourceTrigger=PropertyChanged}">
             <xctk:CheckListBox.ItemTemplate>
                 <DataTemplate>
@@ -100,12 +111,12 @@
                 </DataTemplate>
             </xctk:CheckListBox.ItemTemplate>
         </xctk:CheckListBox>
-        <TextBlock Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Text="Imported Billing Data" VerticalAlignment="Bottom" />
-        <DataGrid x:Name="DataGridImportedData" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="5" AutoGenerateColumns="True" CanUserReorderColumns="False" CanUserSortColumns="True" MinHeight="52"
+        <TextBlock Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Text="Imported Billing Data" VerticalAlignment="Bottom" />
+        <DataGrid x:Name="DataGridImportedData" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="5" AutoGenerateColumns="True" CanUserReorderColumns="False" CanUserSortColumns="True" MinHeight="52"
             IsReadOnly="True" TabIndex="5" Style="{StaticResource DataGridStyle}" ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"
             ItemsSource="{Binding ImportedDataCollection}">
         </DataGrid>
-        <StackPanel Grid.Row="6" Grid.Column="0" Grid.RowSpan="7" VerticalAlignment="Bottom">
+        <StackPanel Grid.Row="8" Grid.Column="0" Grid.RowSpan="10" VerticalAlignment="Bottom">
             <Button x:Name="ButtonExport" ToolTip="Export the exceptions to Excel." TabIndex="6" Margin="0,0,0,10" 
                 Style="{StaticResource UXImageTextButtonStyle}" Width="Auto" Command="{Binding ExportCommand}">
                 <StackPanel Orientation="Horizontal" Width="118">
