--- a/Modules/MobileManager/Views/Billing/ViewBillingDataExport.xaml
+++ b/Modules/MobileManager/Views/Billing/ViewBillingDataExport.xaml
@@ -23,14 +23,17 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="165" />
             <ColumnDefinition Width="10" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Margin="0,10,0,0">
+        <StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="6" Margin="0,10,0,0">
             <Button x:Name="ButtonStartStop" ToolTip="{Binding StartStopButtonToolTip, UpdateSourceTrigger=PropertyChanged}" TabIndex="1" Margin="0,0,0,10" 
                 Style="{StaticResource UXImageTextButtonStyle}" Width="Auto" Command="{Binding StartStopImportCommand}" IsEnabled="{Binding CanStartStopImport}">
                 <StackPanel Orientation="Horizontal" Width="118">
@@ -42,35 +45,26 @@
                 Text="{Binding ImportPageInstruction}">
             </TextBox>
         </StackPanel>
-        <Grid Grid.Row="0" Grid.Column="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="5" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <TextBlock x:Name="TextBlockImportUpdateProgresss" Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom" Style="{StaticResource UXLabelTextStyle}"                
-                    Text="{Binding ImportUpdateDescription, UpdateSourceTrigger=PropertyChanged}"/>
-            <ProgressBar x:Name="ProgressBarImportUpdates" Grid.Row="1" Grid.Column="0" BorderBrush="DarkGray" BorderThickness="1"
-                    Value="{Binding ImportUpdateProgress, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding ImportUpdateCount, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button x:Name="ButtonStartImport" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" ToolTip="Import the data from the selected data sheet." TabIndex="5"
-                    IsEnabled="{Binding CanImport}" Width="80" Style="{StaticResource UXImageTextButtonStyle}" Command="{Binding ImportCommand}">
-                <StackPanel Orientation="Horizontal" ToolTip="Import the selected data.">
-                    <Image Source="/Gijima.IOBM.MobileManager;component/Assets/Images/374.png" Margin="0,1,10,1"/>
-                    <TextBlock Text="Import" VerticalAlignment="Center"/>
-                </StackPanel>
-            </Button>
-        </Grid>
-        <TextBlock Grid.Row="1" Grid.Column="3" Text="Billing Run Totals" VerticalAlignment="Bottom" />
-        <DataGrid x:Name="DataGridBillingTotals" Grid.Column="3" Grid.Row="2" AutoGenerateColumns="True" CanUserReorderColumns="False" CanUserSortColumns="True" MinHeight="52"
+        <TextBlock x:Name="TextBlockImportUpdateProgresss" Grid.Row="0" Grid.Column="2" VerticalAlignment="Bottom" Style="{StaticResource UXLabelTextStyle}"                
+            Text="{Binding ImportUpdateDescription, UpdateSourceTrigger=PropertyChanged}">
+        </TextBlock>
+        <ProgressBar x:Name="ProgressBarImportUpdates" Grid.Row="1" Grid.Column="2" BorderBrush="DarkGray" BorderThickness="1"
+            Value="{Binding ImportUpdateProgress, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding ImportUpdateCount, UpdateSourceTrigger=PropertyChanged}">
+        </ProgressBar>
+        <Button x:Name="ButtonStartImport" Grid.Row="1" Grid.Column="4" HorizontalAlignment="Right" ToolTip="Import the data from the selected data sheet." TabIndex="5"
+            IsEnabled="{Binding CanImport}" Width="80" Style="{StaticResource UXImageTextButtonStyle}" Command="{Binding ImportCommand}">
+            <StackPanel Orientation="Horizontal" ToolTip="Import the selected data.">
+                <Image Source="/Gijima.IOBM.MobileManager;component/Assets/Images/374.png" Margin="0,1,10,1"/>
+                <TextBlock Text="Import" VerticalAlignment="Center"/>
+            </StackPanel>
+        </Button>
+        <TextBlock Grid.Row="2" Grid.Column="2" Text="Billing Run Totals" VerticalAlignment="Bottom" />
+        <DataGrid x:Name="DataGridBillingTotals" Grid.Row="3" Grid.Column="2" AutoGenerateColumns="True" CanUserReorderColumns="False" CanUserSortColumns="True" MinHeight="52"
             IsReadOnly="True" TabIndex="7" Style="{StaticResource DataGridStyle}" ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"
             ItemsSource="{Binding ImportedDataCollection}">
         </DataGrid>
-        <TextBlock Grid.Row="3" Grid.Column="2" Text="Billing Run Data" VerticalAlignment="Bottom" />
-        <DataGrid x:Name="DataGridBillingData" Grid.Column="2" Grid.Row="4" AutoGenerateColumns="True" CanUserReorderColumns="False" CanUserSortColumns="True" MinHeight="52"
+        <TextBlock Grid.Row="4" Grid.Column="2" Text="Billing Run Data" VerticalAlignment="Bottom" />
+        <DataGrid x:Name="DataGridBillingData" Grid.Column="2" Grid.Row="5" AutoGenerateColumns="True" CanUserReorderColumns="False" CanUserSortColumns="True" MinHeight="52"
             IsReadOnly="True" TabIndex="7" Style="{StaticResource DataGridStyle}" ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"
             ItemsSource="{Binding ImportedDataCollection}">
         </DataGrid>
