--- a/Modules/MobileManager/Views/Administration/ViewCellular.xaml
+++ b/Modules/MobileManager/Views/Administration/ViewCellular.xaml
@@ -283,9 +283,9 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <ComboBox x:Name="ComboBoxContractStatus" Grid.Column="0" ToolTip="Select the contract status." TabIndex="24" IsSynchronizedWithCurrentItem="True" Height="20"
+                        <ComboBox x:Name="ComboBoxContractStatus" Grid.Column="0" ToolTip="Select the contract status." TabIndex="24" IsSynchronizedWithCurrentItem="False" Height="20"
                             ItemsSource="{Binding StatusCollection}" DisplayMemberPath="StatusDescription" 
-                            SelectedItem="{Binding SelectedStatus, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" BorderBrush="{Binding RequiredFieldColour}" >
+                            SelectedItem="{Binding SelectedStatus, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" BorderBrush="{Binding RequiredFieldColour}" >
                         </ComboBox>
                         <Button x:Name="ButtonContractStatusCrud" Grid.Column="1" Margin="2,0,0,0" ToolTip="Add, edit or delete contract statuses." TabIndex="25" Height="20"
                             Style="{StaticResource UXImageButtonStyle}" Command="{Binding ContractStatusCommand}">
