--- a/Modules/MobileManager/Views/Billing/ViewExtDataImport.xaml
+++ b/Modules/MobileManager/Views/Billing/ViewExtDataImport.xaml
@@ -31,7 +31,7 @@
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Margin="0,10,0,0">
             <Button x:Name="ButtonStartStop" ToolTip="{Binding StartStopButtonToolTip, UpdateSourceTrigger=PropertyChanged}" TabIndex="1" Margin="0,0,0,10" 
-                Style="{StaticResource UXImageTextButtonStyle}" Width="Auto" Command="{Binding StartStopImportCommand}" IsEnabled="{Binding CanStartStopImport}">
+                Style="{StaticResource UXImageTextButtonStyle}" Width="Auto" Command="{Binding StartStopImportCommand}">
                 <StackPanel Orientation="Horizontal" Width="118">
                     <Image Source="{Binding StartStopButtonImage, UpdateSourceTrigger=PropertyChanged}" Margin="0,1,6,1"/>
                     <TextBlock Text="{Binding StartStopButtonText, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center"/>
