--- a/Modules/MobileManager/Views/Maintenance/ViewCompany.xaml
+++ b/Modules/MobileManager/Views/Maintenance/ViewCompany.xaml
@@ -6,8 +6,9 @@
              xmlns:mm="clr-namespace:Gijima.IOBM.MobileManager.Common.Helpers;assembly=Gijima.IOBM.MobileManager.Common"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"             
-             mc:Ignorable="d" 
-             Height="269" Width="600">
+             mc:Ignorable="d"
+             d:DesignHeight="400" d:DesignWidth="600"
+             Height="Auto" Width="Auto">
 
     <UserControl.Resources>
         <mm:UIDataConvertionHelper x:Key="UIDataConvertionHelper"/>
