--- a/Modules/MobileManager/Views/Maintenance/ViewCompanyBillingLevel.xaml
+++ b/Modules/MobileManager/Views/Maintenance/ViewCompanyBillingLevel.xaml
@@ -6,8 +6,9 @@
              xmlns:mm="clr-namespace:Gijima.IOBM.MobileManager.Common;assembly=Gijima.IOBM.MobileManager.Common"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="False"             
-             mc:Ignorable="d" 
-             Height="200" Width="400">
+             mc:Ignorable="d"
+             d:DesignHeight="200" d:DesignWidth="400"
+             Height="Auto" Width="Auto">
 
     <Grid>
         <Grid.RowDefinitions>
