--- a/Modules/MobileManager/Views/Maintenance/ViewSuburb.xaml
+++ b/Modules/MobileManager/Views/Maintenance/ViewSuburb.xaml
@@ -7,8 +7,8 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"             
              mc:Ignorable="d" 
-             Height="350" Width="600">
-
+             d:DesignHeight="350" d:DesignWidth="600"
+             Height="Auto" Width="Auto">
     <UserControl.Resources>
         <mm:UIDataConvertionHelper x:Key="UIDataConvertionHelper"/>
     </UserControl.Resources>
