--- a/Modules/MobileManager/Views/Administration/ViewCellular.xaml
+++ b/Modules/MobileManager/Views/Administration/ViewCellular.xaml
@@ -430,43 +430,49 @@
                     SelectedDate="{Binding SelectedClientBilling.StopBillingToDate, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding SplitBilling}"/>
                 <TextBlock Grid.Row="4" Grid.Column="0" Text="Billing level:" Style="{StaticResource UXLabelTextStyle}" Margin="0,5" ></TextBlock>
                 <Border Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="5" BorderThickness="1" BorderBrush="{Binding ValidBillingLevel}">
-                    <ComboBox x:Name="ComboBoxCompanyLevel" ToolTip="Select the company billing level." TabIndex="49" IsSynchronizedWithCurrentItem="True" 
-                        IsEnabled="{Binding AllowBillingLevels, UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding BillingLevelCollection}" DisplayMemberPath="BillingLevelDescription" 
-                        SelectedItem="{Binding SelectedBillingLevel, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
-                    </ComboBox>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <ComboBox x:Name="ComboBoxCompanyLevel" ToolTip="Select the company billing level." TabIndex="49" IsSynchronizedWithCurrentItem="True" 
+                                    IsEnabled="{Binding AllowBillingLevels, UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding BillingLevelCollection}" DisplayMemberPath="BillingLevelDescription" 
+                                    SelectedItem="{Binding SelectedBillingLevel, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}">
+                        </ComboBox>
+                    </Grid>
                 </Border>
                 <TextBlock Grid.Row="6" Grid.Column="0" Text="WDP allwnc:" Style="{StaticResource UXLabelTextStyle}" Margin="0,3"></TextBlock>
-                <TextBox x:Name="TextBoxWDPAllowance" Grid.Row="6" Grid.Column="1" TabIndex="50" ToolTip="Enter the WDP allowance value." Style="{StaticResource UXTextBoxStyle}"
+                <TextBox x:Name="TextBoxWDPAllowance" Grid.Row="6" Grid.Column="1" TabIndex="51" ToolTip="Enter the WDP allowance value." Style="{StaticResource UXTextBoxStyle}"
                     IsEnabled="{Binding AllowWDPAllowance}" Text="{Binding SelectedWDPAllowance, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, StringFormat=N2}" BorderBrush="{Binding ValidWDPAllowance}" Grid.ColumnSpan="2">
                 </TextBox>
                 <TextBlock Grid.Row="6" Grid.Column="4" Text="Voice allwnc:" Style="{StaticResource UXLabelTextStyle}" Margin="0,3"></TextBlock>
-                <TextBox x:Name="TextBoxVoiceAllowance" Grid.Row="6" Grid.Column="5" TabIndex="51" ToolTip="Enter the voice allowance value." Style="{StaticResource UXTextBoxStyle}"
+                <TextBox x:Name="TextBoxVoiceAllowance" Grid.Row="6" Grid.Column="5" TabIndex="52" ToolTip="Enter the voice allowance value." Style="{StaticResource UXTextBoxStyle}"
                     IsEnabled="{Binding AllowVoiceAllowance}" Text="{Binding SelectedVoiceAllowance, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged, StringFormat=N2}" BorderBrush="{Binding ValidVoiceAllowance}">
                 </TextBox>
                 <TextBlock Grid.Row="8" Grid.Column="0" Text="Provider limit:" Style="{StaticResource UXLabelTextStyle}" Margin="0,3"></TextBlock>
-                <TextBox x:Name="TextBoxSPAllowance" Grid.Row="8" Grid.Column="1" TabIndex="52" ToolTip="Enter the service provider limit." Style="{StaticResource UXTextBoxStyle}"
+                <TextBox x:Name="TextBoxSPAllowance" Grid.Row="8" Grid.Column="1" TabIndex="53" ToolTip="Enter the service provider limit." Style="{StaticResource UXTextBoxStyle}"
                     IsEnabled="{Binding SplitBilling}" Text="{Binding SelectedSPAllowance, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2">
                 </TextBox>
                 <TextBlock Grid.Row="8" Grid.Column="4" Text="Allwnc limit:" Style="{StaticResource UXLabelTextStyle}" Margin="0,3"></TextBlock>
-                <TextBox x:Name="TextBoxAllowanceLimit" Grid.Row="8" Grid.Column="5" TabIndex="53" ToolTip="Enter the value to monitor voice allowance against." Style="{StaticResource UXTextBoxStyle}"
+                <TextBox x:Name="TextBoxAllowanceLimit" Grid.Row="8" Grid.Column="5" TabIndex="54" ToolTip="Enter the value to monitor voice allowance against." Style="{StaticResource UXTextBoxStyle}"
                     Text="{Binding SelectedAllowanceLimit, UpdateSourceTrigger=PropertyChanged}">
                 </TextBox>
                 <TextBlock Grid.Row="10" Grid.Column="0" Text="International:" Margin="0,1,5,0" Style="{StaticResource UXLabelTextStyle}"></TextBlock>
                 <StackPanel Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="5" Orientation="Horizontal" IsEnabled="{Binding SplitBilling}" >
-                    <CheckBox x:Name="CheckBoxIntDialing" Content="Dailing" VerticalAlignment="Center" Margin="0,0,5,0" TabIndex="54" IsChecked="{Binding SelectedIntDailing, UpdateSourceTrigger=PropertyChanged}" />
-                    <CheckBox x:Name="CheckBoxIntDialingPerm" Content="Prmnt" VerticalAlignment="Center" TabIndex="55" IsChecked="{Binding SelectedPermanentDailing, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding SelectedIntDailing}"/>
-                    <CheckBox x:Name="CheckBoxIntRoaming" Content="Roaming" VerticalAlignment="Center" Margin="30,0,5,0" TabIndex="56" IsChecked="{Binding SelectedIntRoaming, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
-                    <CheckBox x:Name="CheckBoxIntRoamingPerm" Content="Prmnt" VerticalAlignment="Center" TabIndex="57" IsChecked="{Binding SelectedPermanentRoaming, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding SelectedIntRoaming}"/>
+                    <CheckBox x:Name="CheckBoxIntDialing" Content="Dailing" VerticalAlignment="Center" Margin="0,0,5,0" TabIndex="55" IsChecked="{Binding SelectedIntDailing, UpdateSourceTrigger=PropertyChanged}" />
+                    <CheckBox x:Name="CheckBoxIntDialingPerm" Content="Prmnt" VerticalAlignment="Center" TabIndex="56" IsChecked="{Binding SelectedPermanentDailing, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding SelectedIntDailing}"/>
+                    <CheckBox x:Name="CheckBoxIntRoaming" Content="Roaming" VerticalAlignment="Center" Margin="30,0,5,0" TabIndex="57" IsChecked="{Binding SelectedIntRoaming, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" />
+                    <CheckBox x:Name="CheckBoxIntRoamingPerm" Content="Prmnt" VerticalAlignment="Center" TabIndex="58" IsChecked="{Binding SelectedPermanentRoaming, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding SelectedIntRoaming}"/>
                 </StackPanel>
                 <TextBlock Grid.Row="12" Grid.Column="0" Text="Country visiting:" Style="{StaticResource UXLabelTextStyle}" Margin="0,3"></TextBlock>
-                <TextBox x:Name="TextBoxCountryVisiting" Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="5" TabIndex="58" ToolTip="Select the country for roaming." Style="{StaticResource UXTextBoxStyle}"
+                <TextBox x:Name="TextBoxCountryVisiting" Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="5" TabIndex="59" ToolTip="Select the country for roaming." Style="{StaticResource UXTextBoxStyle}"
                     Text="{Binding SelectedRoamingCountry, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" BorderBrush="{Binding ValidRoamingCountry}" IsEnabled="{Binding ValidSelectedRoaming}">
                 </TextBox>
                 <TextBlock Grid.Row="14" Grid.Column="0" Text="Roaming from:" Style="{StaticResource UXLabelTextStyle}" Margin="0,5"></TextBlock>
-                <DatePicker x:Name="DatePickerRoamingFrom" Grid.Row="14" Grid.Column="1" TabIndex="59" ToolTip="Select the date to start roaming from."
+                <DatePicker x:Name="DatePickerRoamingFrom" Grid.Row="14" Grid.Column="1" TabIndex="60" ToolTip="Select the date to start roaming from."
                     SelectedDate="{Binding SelectedRoamingFromDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" BorderBrush="{Binding ValidRoamingFromDate}" IsEnabled="{Binding ValidSelectedRoaming}" Grid.ColumnSpan="2"/>
                 <TextBlock Grid.Row="14" Grid.Column="4" Text="Roaming to:" Style="{StaticResource UXLabelTextStyle}" Margin="0,5"></TextBlock>
-                <DatePicker x:Name="DatePickerRoamingTo" Grid.Row="14" Grid.Column="5" TabIndex="60" ToolTip="Select the date to stop roaming."
+                <DatePicker x:Name="DatePickerRoamingTo" Grid.Row="14" Grid.Column="5" TabIndex="61" ToolTip="Select the date to stop roaming."
                     SelectedDate="{Binding SelectedRoamingToDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" BorderBrush="{Binding ValidRoamingToDate}" IsEnabled="{Binding ValidSelectedRoaming}"/>
             </Grid>
         </GroupBox>
